--- a/src/App.css
+++ b/src/App.css
@@ -84,9 +84,10 @@ body {
   color: #fff;
   border: none;
   padding: 10px 20px;
-  margin-top: 10px;
+  margin-top: 8px;
   cursor: pointer;
   transition: transform 0.2s;
+  margin-left: 5px;
 }
 
 .Products button:hover {
@@ -170,3 +171,35 @@ body {
   color: #111;
   user-select: none;
 }
+
+.App h5 {
+  color: #111;
+  user-select: none;
+}
+
+
+.Products table {
+  background-color: #333;
+  color: #fff;
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.Products th, .Products td {
+  padding: 10px;
+  border: 1px solid #444;
+}
+
+.Products th {
+  background-color: #444;
+}
+
+.Products tr:nth-child(even) {
+  background-color: #555;
+}
+
+.Products tr:nth-child(odd) {
+  background-color: #666;
+}
+
